[package]
name = "galileo-protomaps"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false }
parking_lot = "0.12.3"
galileo = { path = "vendor/galileo/galileo" }
galileo-egui = { path = "vendor/galileo/galileo-egui" }
galileo-types = { path = "vendor/galileo/galileo-types" }
galileo-mvt = { path = "vendor/galileo/galileo-mvt" }
egui = "0.31"
pmtiles = { version = "0.11.0", features = ["http-async"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.97"
async-trait = "0.1.87"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }
async-compression = "0.4.20"
